--- a/InfoKartaPolaka.html
+++ b/InfoKartaPolaka.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <head>
 <script type="text/javascript" src="timer.js"></script>
+
+<title></title>
+</head>
+<body style="background-color: green; color: black" onload="odliczanie();">
+<div id="zegar"></div>
+<h1>Wesołych świąt</h1>
 <script>
 var S=[];
 
@@ -44,21 +50,16 @@ function snow(HM, i) {
   setTimeout("snow("+HM+")",10);
 }
 
-onload=function() {init('BezGierek.png', 80);}
+onload=function() {init('kwit2.png', 80);}
 
 
 
 </script>
-<title></title>
-</head>
-<body style="background-color: green; color: black" onload="odliczanie();">
-<div id="zegar"></div>
-<h1>Wesołych świąt</h1>
 <p>Z okazji Świąt Wielkanocnych pragnę złożyć najserdeczniejsze życzenia Państwu oraz Waszym bliskim.</p>
 <p>Niech te Święta będą pełne miłości, wzajemnego szacunku oraz radosnego świętowania w gronie rodziny.</p>
 <p>Życzę zdrowia, pokoju oraz wszelkiej pomyślności.
 </p>
-<img src="https://u.profitroom.pl/2017.skalnykarpacz.pl/thumb/800x800/uploads/WIELKANOC-2024-3.jpg" style="margin-left:900px;">
+<img src="Hampti.png" style="margin-top:10px; margin-left:800px;">
 
 </body>
 </html>
